# SysDVR-Upscaler

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
cmake/: CompileShaders.cmake  CompilerWarnings.cmake  FindFFmpeg.cmake
docs/: chroma-reconstruction.md  compression-preprocessing.md  dependencies-windows.md  nexus-adaptive-detail.md  phase1-5-quality-hardening.md  phase1-architecture.md  phase1-validation.md  phase2-live-bridge.md  presentation-mapping.md  sysdvr-bridge.md  sysdvr-upscaler-bridge-integration.md  sysdvr-upscaler-bridge-protocol.md  telemetry-methodology.md  third-party-notices.md  upscale-comparison.md  upscalers.md
docs/phase3/: d3d11va-readback.md  software-baseline.md
scripts/: build-sysdvr-bridge.ps1  build-sysdvr-upscaler-bridge.ps1  build-windows.ps1  configure-windows.ps1  run-live-bridge-managed.ps1  run-live-bridge-manual.ps1  run-samples.ps1  validate-samples.ps1  validate-sysdvr-upscaler-bridge.ps1
shaders/: bilinear_upscale.comp  fsr1_easu.comp  fsr1_rcas.comp  fullscreen_present.frag  fullscreen_present.vert  sharpen_cas.comp  upscale_bicubic_catmull_rom.comp  upscale_lanczos2.comp  upscale_nearest.comp  yuv420p_to_rgb.comp
src/: main.cpp
src/app/: AppConfig.cpp  AppConfig.h  Application.cpp  ApplicationEntry.h
src/decode/: DecodedFrame.h  DecoderBackend.h  DecoderCapabilities.cpp  DecoderCapabilities.h  FFmpegRuntime.cpp  FFmpegRuntime.h  FFmpegVideoReader.cpp  FFmpegVideoReader.h  FramePool.cpp  FramePool.h  FrameQueue.cpp  FrameQueue.h  SysDvrBridgeProtocol.cpp  SysDvrBridgeProtocol.h  SysDvrPipeSource.cpp  SysDvrPipeSource.h
src/platform/: Window.cpp  Window.h
src/playback/: PlaybackClock.cpp  PlaybackClock.h
src/render/: FidelityFxConstants.cpp  FidelityFxConstants.h  Upscaling.cpp  Upscaling.h  VideoPipeline.cpp  VideoPipeline.h  VulkanContext.cpp  VulkanContext.h
src/telemetry/: ImGuiOverlay.cpp  ImGuiOverlay.h  Metrics.cpp  Metrics.h
src/utility/: ColorMath.cpp  ColorMath.h  Log.cpp  Log.h
tests/: AppConfigTests.cpp  CMakeLists.txt  ColorMathTests.cpp  FrameQueueTests.cpp  MetricsTests.cpp  PlaybackClockTests.cpp  SysDvrBridgeProtocolTests.cpp  UpscalingTests.cpp
tools/SysDvrBridgeTestProducer/: Program.cs
